# aosc-os-pvr

./: README.md
common/pvr-env/autobuild/: defines
common/xf86-video-pvrdri/: spec
common/xf86-video-pvrdri/autobuild/: defines  prepare
common/xf86-video-pvrdri/autobuild/src/: drmmode_display.c
common/xf86-video-pvrdri/autobuild/src/glamor/: glamor.c  glamor_dash.c  glamor_fbo.c  glamor_font.c  glamor_glyphblt.c  glamor_lines.c  glamor_points.c  glamor_render.c  glamor_segs.c  meson.build
ddk117/mesa-ddk117/: spec
ddk117/mesa-ddk117/autobuild/: build  defines
ddk117/mesa-ddk117/autobuild/patches/: 0001-redirect-glapi.patch  0002-change-LIBGL_ALWAYS_SOFTWARE-to-PVRGL_ALWAYS_SOFTWAR.patch  0003-Revert-gbm-add-gbm_bo_blit.patch  0004-gbm-backend-ize.patch
ddk117/th1520-pvr-blobs/: spec
ddk117/th1520-pvr-blobs/autobuild/: build  defines
ddk117/xf86-video-thead/: spec
ddk117/xf86-video-thead/autobuild/: beyond  defines
ddk117/xf86-video-thead/autobuild/patches/: 0001-add-flush_queue-accel-callback.patch  0002-implement-present-flush.patch  0003-return-covering-crtc-even-rotated.patch  0004-stop-being-too-confident-on-seq-wrapping.patch  0005-fix-visibility.patch
ddk119/jh7110-pvr-blobs/: spec
ddk119/jh7110-pvr-blobs/autobuild/: build  defines
ddk119/mesa-ddk119/: spec
ddk119/mesa-ddk119/autobuild/: build  defines
ddk119/mesa-ddk119/autobuild/patches/: 0024-dri-add-support-for-YUV-DRI-config.patch  0064-GL_EXT_texture_storage_compression-entry-points.patch  1005-Update-OpenGL-headers.patch  1005-drop-EGL_EXT_image_dma_buf_import_modifiers.patch  1006-mesa-main-add-support-for-EXT_texture_storage.patch  (+1 more)
ddk119/xf86-video-pvrdri/: spec
ddk119/xf86-video-pvrdri/autobuild/src/: dri2.c  driver.c  driver.h  dumb_bo.c  meson.build  pageflip.c  present.c  vblank.c
ddk119/xf86-video-pvrdri/autobuild/src/glamor/: glamor_composite_glyphs.c  glamor_copy.c  glamor_egl.c  glamor_egl.h  glamor_gradient.c  glamor_priv.h  glamor_program.c  glamor_rects.c  glamor_spans.c  glamor_text.c  glamor_utils.h  glamor_xv.c
ddk232/k1-x-pvr-blobs/: spec
ddk232/k1-x-pvr-blobs/autobuild/: build  defines
ddk232/mesa-ddk232/: spec
ddk232/mesa-ddk232/autobuild/: defines
ddk242/eic770x-pvr-blobs/: spec
ddk242/eic770x-pvr-blobs/autobuild/: build  defines
ddk242/k1-x-pvr-blobs/: spec
ddk242/k1-x-pvr-blobs/autobuild/: defines
ddk242/mesa-pvr-ddk242/: spec
ddk242/mesa-pvr-ddk242/autobuild/: build  defines
(+36 files in other folders)
